feat: add error text and json type #2133